--- a/Documental/web/GUI/Gestion/BandejaEntrada/GUIDocumentoDetalle.xhtml
+++ b/Documental/web/GUI/Gestion/BandejaEntrada/GUIDocumentoDetalle.xhtml
@@ -27,18 +27,18 @@
                     </p:row>
                     <p:row>
                         <p:column colspan="20" style="font-weight: bold;"><h:outputText value="#{bundle.documental_GUIRadicar_formulario_hora}"/></p:column> 
-                        <p:column colspan="80" style="font-weight: bold;"><h:outputText value="#{beanBandeja.docTrabajo.fechaCreacion}"/></p:column>
+                        <p:column colspan="80" style="font-weight: bold;"><h:outputText value="#{beanBandeja.selected.documento.fechaCreacion}"/></p:column>
                     </p:row>
                     <p:row>
                         <p:column colspan="20" style="font-weight: bold;"><h:outputText value="#{bundle.documental_GUIRadicar_formulario_asunto}"/></p:column> 
                         <p:column colspan="80" style="font-weight: bold;">
-                            <h:outputText value="#{beanBandeja.docTrabajo.asunto}" />                  
+                            <h:outputText value="#{beanBandeja.selected.documento.asunto}" />                  
                         </p:column>
                     </p:row> 
                     <p:row>
                         <p:column colspan="20" style="font-weight: bold;"><h:outputText value="#{bundle.documental_GUIRadicar_formulario_descripcion}"/></p:column> 
                         <p:column colspan="80" style="font-weight: bold;">
-                            <h:outputText value="#{beanBandeja.docTrabajo.descripcion}" />                  
+                            <h:outputText value="#{beanBandeja.selected.documento.descripcion}" />                  
                         </p:column>
                     </p:row> 
                     <p:row>
@@ -60,37 +60,37 @@
                      <p:row>-->
                         <p:column colspan="20" style="font-weight: bold;"><h:outputText value="#{bundle.documental_GUIRadicar_formulario_estado}"/></p:column> 
                         <p:column colspan="80" style="font-weight: bold;">
-                            <h:outputText value="#{beanBandeja.docTrabajo.estado}"></h:outputText>
+                            <h:outputText value="#{beanBandeja.selected.documento.estado}"></h:outputText>
                         </p:column>
                     </p:row>
                     <p:row>
                         <p:column colspan="20" style="font-weight: bold;"><h:outputText value="#{bundle.documental_GUIRadicar_formulario_prioridad}"/></p:column> 
                         <p:column colspan="80" style="font-weight: bold;">
-                            <h:outputText value="#{beanBandeja.docTrabajo.prioridad}"/>
+                            <h:outputText value="#{beanBandeja.selected.documento.prioridad}"/>
                         </p:column>
                     </p:row>
                     <p:row>
                         <p:column colspan="20" style="font-weight: bold;"><h:outputText value="#{bundle.documental_GUIRadicar_formulario_tipodocumento}"/></p:column> 
                         <p:column colspan="80" style="font-weight: bold;">
-                            <h:outputText value="#{beanBandeja.docTrabajo.tipoId.nombre}" />
+                            <h:outputText value="#{beanBandeja.selected.documento.tipoId.nombre}" />
                         </p:column>
                     </p:row>
                     <p:row>
                         <p:column colspan="20" style="font-weight: bold;"><h:outputText value="#{bundle.documental_GUIRadicar_formulario_findocumento}"/></p:column> 
                         <p:column colspan="80" style="font-weight: bold;">
-                            <h:outputText value="#{beanBandeja.docTrabajo.finalidad}"/>
+                            <h:outputText value="#{beanBandeja.selected.documento.finalidad}"/>
                         </p:column>
                     </p:row>
                     <p:row>
                         <p:column colspan="20" style="font-weight: bold;"><h:outputText value="#{bundle.documental_GUIRadicar_formulario_visualizacion}"/></p:column> 
                         <p:column colspan="80" style="font-weight: bold;">
-                            <h:outputText value="#{beanBandeja.docTrabajo.visibilidad}"/>
+                            <h:outputText value="#{beanBandeja.selected.documento.visibilidad}"/>
                         </p:column>
                     </p:row>                  
                     <p:row>
                         <p:column colspan="20" style="font-weight: bold;"><h:outputText value="#{bundle.documental_GUIRadicar_formulario_palabrasclaves}"/></p:column> 
                         <p:column colspan="80" style="font-weight: bold;">
-                            <h:outputText value="#{beanBandeja.docTrabajo.palabrasClave}"/>                       
+                            <h:outputText value="#{beanBandeja.selected.documento.palabrasClave}"/>                       
                         </p:column>
                     </p:row>                    
                 </p:panelGrid>
@@ -103,7 +103,7 @@
                             </p:commandButton>                                                    
 
                             <p:commandButton  value="&nbsp;Ver historico" action="#{beanPorImplementar.verHistorico()}" icon="volver" immediate="true"/>                  
-                            <p:commandButton  value="&nbsp;Rediriguir" action="#{beanPorImplementar.rediriguir()}" icon="volver" immediate="true"/>                  
+                            <p:commandButton  value="&nbsp;Rediriguir" action="#{beanBandeja.prepareRedirigir()}" icon="volver" immediate="true"/>                  
                             <p:commandButton  value="&nbsp;Agregar Anexo" action="#{beanAnexo.prepareCreate(beanBandeja.docTrabajo.idDocumento)}" icon="volver" immediate="true"/>                  
                             <p:confirmDialog global="true" showEffect="fade" hideEffect="explode">
                                 <p:commandButton value="Yes" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check"/>
