--- a/Documental/web/menuDocumental.xhtml
+++ b/Documental/web/menuDocumental.xhtml
@@ -35,11 +35,12 @@
                             <p:submenu label="Radicacion">                                                                  
                                 <p:menuitem value="Entrada" icon="caracterizacion" rendered="#{beanUsuario.asPermission('pMenuRadicEntrada')}" action="#{beanRadicacion.prepareCreate()}" />                                  
                                 <p:menuitem value="Salida" icon="cambio"  action="#{beanAnexo.prepareCreate(1)}"/>  
-                                <p:menuitem value="Memorando" icon="documento" rendered="#{beanUsuario.asPermission('pMenuRadicDocumento')}" />                                                               
+                                <p:menuitem value="Memorando" icon="documento" rendered="#{beanUsuario.asPermission('pMenuRadicDocumento')}" />                                                                
                             </p:submenu>
                             <p:submenu label="Gestión">                                                                  
                                 <p:menuitem value="Bandeja de entrada" icon="caracterizacion" action="#{beanBandeja.prepareList()}" rendered="#{beanUsuario.asPermission('pMenuGestBandeja')}" />                                  
                                 <p:menuitem value="Tramites" icon="cambio" rendered="#{beanUsuario.asPermission('pMenuGestCambio')}" />                                                                                               
+                                <p:menuitem value="historico" icon="documento" action="#{beanHistorico.prepareList()}" rendered="#{beanUsuario.asPermission('pMenuGestCambio')}" />
                             </p:submenu>
                             <p:submenu label="Consulta">                                                                  
                                 <p:menuitem value="Consultas" action="#{beanConsulta.prepareList()}"  icon="consultar" rendered="#{beanUsuario.asPermission('pMenuConsRadicados')}" />                                                                                                                                                           
