Correciones: Correcion en editar usuarios campo de contraseña vacio correcion en editar usuarios asignacion de director de dependencia con id incorrecto

--- a/Documental/web/GUI/Administrador/Usuarios/GUIUsuarioEditar.xhtml
+++ b/Documental/web/GUI/Administrador/Usuarios/GUIUsuarioEditar.xhtml
@@ -62,7 +62,7 @@
                             </p:selectOneMenu>
                         </p:column> 
                         <p:column colspan="50" style="font-weight: bold;"><h:outputText value="#{bundle.documental_GUIUsuario_Contrasena}"/></p:column>
-                        <p:column colspan="50"><p:password style="width: 400px" value="#{beanUsuario.selectedC.contrasena}" ></p:password></p:column> 
+                        <p:column colspan="50"><p:password style="width: 400px" value="#{beanUsuario.selectedC.contrasena}" redisplay="true" ></p:password></p:column> 
                     </p:row>  
                 </p:panelGrid>
                 <br></br>
