Funcionalidad Mostrar Historico Agregada

--- a/Documental/web/GUI/Gestion/BandejaEntrada/GUIHistorico.xhtml
+++ b/Documental/web/GUI/Gestion/BandejaEntrada/GUIHistorico.xhtml
@@ -49,6 +49,9 @@ and open the template in the editor.
                     
                 </p:dataTable>          
             </h:form>
+            
+            <p:commandButton  value="&nbsp;Volver" action="#{beanHistorico.volver()}" icon="volver" immediate="true"/>                                                  
+
         </p:panel>        
     </ui:define>
 </ui:composition>
