--- a/Documental/web/GUI/Gestion/BandejaEntrada/GUIDocumentoDetalle.xhtml
+++ b/Documental/web/GUI/Gestion/BandejaEntrada/GUIDocumentoDetalle.xhtml
@@ -102,9 +102,9 @@
                                 <p:confirm header="Confirmation" message="Esta Seguro de Realizar Esta Operación?" icon="ui-icon-alert" />
                             </p:commandButton>                                                    
 
-                            <p:commandButton  value="&nbsp;Ver historico" action="#{beanPorImplementar.verHistorico()}" icon="volver" immediate="true"/>                  
+                            <p:commandButton  value="&nbsp;Ver historico" action="#{beanHistorico.prepareList(beanBandeja.selected.documento.idDocumento)}" icon="volver" immediate="true"/>                  
                             <p:commandButton  value="&nbsp;Rediriguir" action="#{beanBandeja.prepareRedirigir()}" icon="volver" immediate="true"/>                  
-                            <p:commandButton  value="&nbsp;Agregar Anexo" action="#{beanAnexo.prepareCreate(beanBandeja.docTrabajo.idDocumento)}" icon="volver" immediate="true"/>                  
+                            <p:commandButton  value="&nbsp;Agregar Anexo" action="#{beanAnexo.prepareCreate(beanBandeja.selected.documento.idDocumento)}" icon="volver" immediate="true"/>                  
                             <p:confirmDialog global="true" showEffect="fade" hideEffect="explode">
                                 <p:commandButton value="Yes" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check"/>
                                 <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
