--- a/Documental/web/GUI/Gestion/BandejaEntrada/GUIDocumentoDetalle.xhtml
+++ b/Documental/web/GUI/Gestion/BandejaEntrada/GUIDocumentoDetalle.xhtml
@@ -98,20 +98,37 @@
                 <p:panelGrid style="margin-top:10px" >
                     <p:row>
                         <p:column>
-                            <p:commandButton id="bCerrar"  value="&nbsp;Cerrar"  action="#{beanPorImplementar.close()}"  icon="ui-icon-close" >
-                                <p:confirm header="Confirmation" message="Esta Seguro de Realizar Esta Operación?" icon="ui-icon-alert" />
-                            </p:commandButton>                                                    
-
+                            <p:commandButton id="bCerrar"  value="&nbsp;Cerrar" oncomplete="PF('dlg1').show();" icon="ui-icon-close" immediate="true" />                                                                                   
                             <p:commandButton  value="&nbsp;Ver historico" action="#{beanPorImplementar.verHistorico()}" icon="volver" immediate="true"/>                  
                             <p:commandButton  value="&nbsp;Rediriguir" action="#{beanBandeja.prepareRedirigir()}" icon="volver" immediate="true"/>                  
-                            <p:commandButton  value="&nbsp;Agregar Anexo" action="#{beanAnexo.prepareCreate(beanBandeja.docTrabajo.idDocumento)}" icon="volver" immediate="true"/>                  
-                            <p:confirmDialog global="true" showEffect="fade" hideEffect="explode">
-                                <p:commandButton value="Yes" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check"/>
-                                <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
-                            </p:confirmDialog>
+                            <p:commandButton  value="&nbsp;Agregar Anexo" action="#{beanAnexo.prepareCreate(beanBandeja.docTrabajo.idDocumento)}" icon="volver" immediate="true"/>                                              
+                            <p:commandButton  value="&nbsp;Volver" action="#{beanBandeja.volver()}" icon="volver" immediate="true"/>                                              
                         </p:column>
                     </p:row>
                 </p:panelGrid>
+                <!--Formulario para cerrar documento-->
+                <p:dialog header="Cerrar Documento" widgetVar="dlg1"  minHeight="30">   
+                    <h:form id="frmCerrar">
+                        <p:panelGrid style="margin-top:10px" >
+                            <f:facet name="header">
+                                <p:row>
+                                    <p:column colspan="200" style="width: 400px">FINALIZAR TRAMITE DOCUMENTO</p:column>
+                                </p:row>                  
+                            </f:facet>
+
+                            <p:row>
+                                <p:column colspan="35" style="font-weight: bold;">#{bundle.documental_GUIComentariosList_Label_Comentario}</p:column>                              
+                                <p:column colspan="35" style="font-weight: bold;">
+                                    <p:inputTextarea id="comen" required="true" style="width: 400px" value="#{beanBandeja.comentario}" requiredMessage="#{bundle.documental_GUIRedirigirDocumento_Messages_pComentario}" rows="5" cols="30"  maxlength="240"  autoResize="false" />
+                                </p:column>                                        
+                            </p:row>                                                
+                        </p:panelGrid>
+                        <br></br>                                
+                        <p:separator/>
+                        <p:commandButton icon="guardar"  oncomplete="PF('dlg1').hide();" action="#{beanBandeja.cerrarDocumento()}" value="&nbsp;Aceptar"/>
+                        <p:commandButton icon="cancelar" oncomplete="PF('dlg1').hide();" value="&nbsp;Cancelar"/>                    
+                    </h:form>
+                </p:dialog>   
             </h:form> 
         </p:panel>
     </ui:define>
