--- a/Documental/web/GUI/Gestion/BandejaEntrada/GUIDocumentoDetalle.xhtml
+++ b/Documental/web/GUI/Gestion/BandejaEntrada/GUIDocumentoDetalle.xhtml
@@ -99,7 +99,7 @@
                     <p:row>
                         <p:column>
                             <p:commandButton id="bCerrar"  value="&nbsp;Cerrar" oncomplete="PF('dlg1').show();" icon="ui-icon-close" immediate="true" />                                                                                   
-                            <p:commandButton  value="&nbsp;Ver historico" action="#{beanPorImplementar.verHistorico()}" icon="volver" immediate="true"/>                  
+                            <p:commandButton  value="&nbsp;Ver historico" action="#{beanHistorico.prepareList(beanBandeja.selected.documento.idDocumento)}" icon="volver" immediate="true"/>                  
                             <p:commandButton  value="&nbsp;Rediriguir" action="#{beanBandeja.prepareRedirigir()}" icon="volver" immediate="true"/>                  
                             <p:commandButton  value="&nbsp;Agregar Anexo" action="#{beanAnexo.prepareCreate(beanBandeja.docTrabajo.idDocumento)}" icon="volver" immediate="true"/>                                              
                             <p:commandButton  value="&nbsp;Volver" action="#{beanBandeja.volver()}" icon="volver" immediate="true"/>                                              
