--- a/Documental/web/WEB-INF/plantillas/menuDocumental.xhtml
+++ b/Documental/web/WEB-INF/plantillas/menuDocumental.xhtml
@@ -38,13 +38,15 @@
                                 <p:menuitem value="Memorando" icon="documento" action="#{beanAnexo.prepareCreate(10)}" />                                                               
                             </p:submenu>
                             <p:submenu label="Gestión">                                                                  
-                                <p:menuitem value="Bandeja de entrada" icon="caracterizacion" action="#{beanBandeja.prepareList()}" rendered="#{beanUsuario.asPermission('pMenuGestBandeja')}" />                                  
-                                <p:menuitem value="Tramites" icon="cambio" rendered="#{beanUsuario.asPermission('pMenuGestCambio')}" />
+                                <p:menuitem value="Bandeja de entrada" icon="caracterizacion" action="#{beanBandeja.prepareList()}" rendered="#{beanUsuario.asPermission('pMenuGestBandeja')}" />    
+                                <p:menuitem value="Bandeja de Salida" icon="caracterizacion" action="#{beanBandeja.prepareSalidaList()}" rendered="#{beanUsuario.asPermission('pMenuGestBandeja')}" />  
+                                <p:menuitem value="Bandeja de Cerrados" icon="caracterizacion" action="#{beanBandeja.prepareCerradosList()}" rendered="#{beanUsuario.asPermission('pMenuGestBandeja')}" />  
+
                             </p:submenu>
                             <p:submenu label="Consulta">                                                                  
                                 <p:menuitem value="Consultas" action="#{beanConsulta.prepareList()}"  icon="consultar" rendered="#{beanUsuario.asPermission('pMenuConsRadicados')}" />                                  
                             </p:submenu>
-                            
+
                             <p:submenu label="Administrador">
                                 <p:submenu label="Permisos Usuario">                                    
                                     <p:menuitem value="Nivel Acceso" action="#{beanNivelAcceso.prepareList()}" icon="configurar" immediate="true"  />                                
@@ -56,7 +58,7 @@
                                     <p:menuitem value="Listar Usuarios" action="#{beanUsuario.prepareList()}" icon="configurar" immediate="true"  />                                
                                     <p:menuitem value="Crear Usuario" action="#{beanUsuario.prepareCreate()}" icon="configurar" />  
                                     <p:menuitem value="Modificar Usuario" action="#{beanUsuario.prepareListEdit()}" icon="configurar" immediate="true"  />                                
-                                                                    
+
                                 </p:submenu>
                                 <p:menuitem value="Dependencias" action="#{beanDependencia.prepareList()}" icon="configurar" />
                             </p:submenu>
