Se formatean fechas

--- a/Documental/web/GUI/Gestion/Anexo/GUIAnexo.xhtml
+++ b/Documental/web/GUI/Gestion/Anexo/GUIAnexo.xhtml
@@ -25,7 +25,7 @@
                     <h:outputText value="#{beanAnexo.documentoSelecciondo.descripcion}" />
                     <p:spacer width="10" height="10"/>
                     <h:outputText value="#{beanAnexo.documentoSelecciondo.fechaCreacion}">
-                        <f:convertDateTime pattern="dd 'de' MMMM 'de' yyyy 'a las' HH:mm" />
+                        <f:convertDateTime pattern="dd 'de' MMMM 'de' yyyy 'a las' hh:mm a" />
                     </h:outputText>
                     
                 </p:column>
