--- a/Documental/web/GUI/Gestion/Comentarios/GUIComentariosList.xhtml
+++ b/Documental/web/GUI/Gestion/Comentarios/GUIComentariosList.xhtml
@@ -64,7 +64,7 @@
                     
                     <p:column  headerText="Fecha y hora">
                         <h:outputText value="#{comentario.fechaComentario}" >
-                            <f:convertDateTime pattern="dd 'de' MMMM 'de' yyyy 'a las' HH:mm" />
+                            <f:convertDateTime pattern="dd 'de' MMMM 'de' yyyy 'a las' hh:mm a" />
                         </h:outputText>
                     </p:column>
                     
