Cambios para mostrar historicos en detalles y se agrega el boton de detalles a consulta

--- a/Documental/web/GUI/Gestion/BandejaEntrada/GUIDocumentoDetalle.xhtml
+++ b/Documental/web/GUI/Gestion/BandejaEntrada/GUIDocumentoDetalle.xhtml
@@ -92,16 +92,16 @@
                         <p:column colspan="80" style="font-weight: bold;">
                             <h:outputText value="#{beanBandeja.selected.documento.palabrasClave}"/>                       
                         </p:column>
-                    </p:row>                    
+                    </p:row>                 
                 </p:panelGrid>
-
-                <p:panelGrid style="margin-top:10px" rendered="#{beanBandeja.accionesDetalle}">
+                
+                <p:panelGrid style="margin-top:10px" rendered="#{beanBandeja.accionesDetalle}" >
                     <p:row>
                         <p:column>
                             <p:commandButton id="bCerrar"  value="&nbsp;Cerrar" oncomplete="PF('dlg1').show();" icon="ui-icon-close" immediate="true" />                                                                                   
                             <p:commandButton  value="&nbsp;Ver historico" action="#{beanHistorico.prepareList(beanBandeja.selected.documento.idDocumento)}" icon="volver" immediate="true"/>                  
                             <p:commandButton  value="&nbsp;Rediriguir" action="#{beanBandeja.prepareRedirigir()}" icon="volver" immediate="true"/>                  
-                            <p:commandButton  value="&nbsp;Agregar Anexo" action="#{beanAnexo.prepareCreate(beanBandeja.selected.documento.idDocumento)}" icon="volver" immediate="true"/>                                              
+                            <p:commandButton  value="&nbsp;Ver Anexos" action="#{beanAnexo.prepareCreate(beanBandeja.selected.documento.idDocumento)}"  icon="fa fa-fw fa-file-pdf-o" immediate="true"/>                                              
                             <p:commandButton  value="&nbsp;Volver" action="#{beanBandeja.volver()}" icon="volver" immediate="true"/>                                         
                         </p:column>
                     </p:row>
