--- a/Documental/web/GUI/Gestion/Anexo/GUIAnexo.xhtml
+++ b/Documental/web/GUI/Gestion/Anexo/GUIAnexo.xhtml
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!--<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">-->
 <ui:composition template="/WEB-INF/plantillas/menuDocumental.xhtml"
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:h="http://java.sun.com/jsf/html"
@@ -68,7 +68,7 @@
                         <h:outputText value="#{archivo.nombreyApellido}" />
                     </p:column>   
                     <p:column headerText="Eliminar">
-                        <h:commandButton rendered="#{archivo.persistido and archivo.permitido}"  id="bEliminar"  value="&nbsp;Eliminar" action="#{beanAnexo.deleteAction(archivo)}" >                                                        
+                        <h:commandButton rendered="#{archivo.persistido and archivo.permitido}"  id="bEliminar"  value="Eliminar" action="#{beanAnexo.deleteAction(archivo)}" >                                                        
                             <f:ajax execute="@form" render="frmListaAnexos:archivosAnexo" />
                         </h:commandButton>
                     </p:column>
@@ -76,8 +76,8 @@
                
                 <h:commandButton  value="Guardar Anexos" action="#{beanAnexo.create()}">
                     <f:ajax execute="@form" render="frmListaAnexos:archivosAnexo" />
-                </h:commandButton>                                                  
-               <!-- <p:commandButton  value="&nbsp;Volver" action="#{beanAnexo.volver()}" icon="volver" immediate="true"/>  -->                                                
+                </h:commandButton>  
+                <h:commandButton value="Volver" action="#{beanAnexo.volver()}" immediate="true"/>               
                 
                 <p:confirmDialog global="true" showEffect="fade" hideEffect="explode">
                     <p:commandButton value="Yes" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check"/>
