Se deshabilitan las opciones de modificacion de detalles en la bandeja de salida

--- a/Documental/web/GUI/Gestion/BandejaEntrada/GUIBandejaSalida.xhtml
+++ b/Documental/web/GUI/Gestion/BandejaEntrada/GUIBandejaSalida.xhtml
@@ -39,7 +39,7 @@
                 <p:column id="button">
                     <f:facet name="header">
                     </f:facet>                                             
-                    <p:commandButton id="editar" icon="editar" value="&nbsp;Detalles" action="#{beanBandeja.detalle(historico)}">
+                    <p:commandButton id="editar" icon="editar" value="&nbsp;Detalles" action="#{beanBandeja.detalleSalida(historico)}">
                         <f:ajax render="@form"/>
                     </p:commandButton> 
                 </p:column>
