31/07/2015 caso de navegación anexo

--- a/Documental/web/GUI/Gestion/BandejaEntrada/GUIAnexo.xhtml
+++ b/Documental/web/GUI/Gestion/BandejaEntrada/GUIAnexo.xhtml
@@ -48,7 +48,7 @@ and open the template in the editor.
                     
                 </p:dataTable>          
             </h:form>            
-            <p:commandButton  value="&nbsp;Volver" action="#{beanBandeja.volver()}" icon="volver" immediate="true"/>                                                  
+            <p:commandButton  value="&nbsp;Volver" action="#{beanBandeja.volver()}" icon="volver"/>                                                  
         </p:panel>        
     </ui:define>
 </ui:composition>
